2004-06-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCmds.c (Tk_WinfoObjCmd): refetch interp result obj for
	'winfo id' as it can change when making the window exist.

2004-06-26  Joe Mistachkin  <joe@mistachkin.com>

	* generic/tkConsole.c (ConsoleDeleteProc): Set tsdPtr->gStdoutInterp
	to NULL when the console command is deleted [Bug 756840].  Also,
	added Tcl_Preserve/Tcl_Release for consoleInterp in InterpreterCmd
	in case it gets deleted during the calls to Tcl_GlobalEval and 
	Tcl_RecordAndEval.

2004-06-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/canvPs.test, etc: Use standard tcltest constraint names.

2004-06-19  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: autoconf 2.5 fixes in Darwin section.
	* unix/configure: autoconf-2.57

2004-06-17  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/constraints.tcl, tests/*.test: Systematization of test
	constraints so many common and basic constraints are defined once
	with a single name.

2004-06-16  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c, win/tkWinWm.c, macosx/tkMacOSXWm.c,
	tests/wm.test, tests/unixWm.test: Fix for #742882
	"Potential division by zero in gridded wm geometry"

2004-06-15  Anton Kovalenko <a_kovalenko@users.sourceforge.net>

	* win/tkWinButton.c: Add a 3D highlight to disabled *buttons and
	labels, the same way as it's now done for disabled menu entries.

2004-06-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/image.n: Enhanced the documentation to take into account the
	concerns raised in [RFE 803060]

	* tests/canvas.test: Updated tests affected by the change to
	ScrollFractions, which is now clean about result generation.

	* generic/tkCanvas.c: Make tag search subsystem use symbolic names
	for type flags for easier maintenance.
	(FIRST_CANVAS_ITEM_MATCHING,FOR_EVERY_CANVAS_ITEM_MATCHING):
	Factorize out searching idioms into macros to reduce the #ifdef
	count and make braces match.